--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.application.name=csdlbtl
 spring.profiles.active=uat
 
 spring.jpa.show-sql=true
+
+# kh?i t?o d? li?u trong data.sql m?i l?n ch?y ?ng d?ng
+spring.sql.init.mode=never
