--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 		</java.version>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>
 				org.springframework.boot
@@ -77,6 +83,13 @@
 				spring-boot-starter-jdbc
 			</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>12.8.1.jre11</version>
+		</dependency>
+
 		<!--
 		<dependency>
 		<groupId>
