--- a/src/main/resources/application-uat.properties
+++ b/src/main/resources/application-uat.properties
@@ -1,5 +1,5 @@
 server.port=8081
-spring.datasource.username=joyboy
-spring.datasource.password=321323
-spring.datasource.url=jdbc:mysql://localhost:3306/hcsdl
+spring.datasource.username=sa
+spring.datasource.password=Quy0905859213@.
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=hcsdl;encrypt=true;trustServerCertificate=true
 spring.jpa.hibernate.ddl-auto=create-drop
